Fix overflow issue for image container

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ section {
 .project-image {
   margin: auto;
   margin: 0 10px;
+  overflow: hidden;
 }
 
 .project-name {
